# coq-tactician

./: .gitignore  LICENSE.md  Makefile  Makefile.coq.local  README.md  _CoqProject  coq-tactician.config  coq-tactician.install  coq-tactician.opam  coq-tactician.opam.template  dune-project  git-benchmark.sh  includes.in
.github/workflows/: bench.yml  ci-daily.yml  ci.yml  deterministic-remote-bench.yml  generate-remote-bench.sh  remote-bench.yml  stdlib-daily.yml  stdlib-daily2.yml  stdlib.yml  timed-remote-bench.yml
coq-shim/: coq-hott.8.10.patch  coq-hott.8.11.patch  coq-hott.8.12.patch  coq-hott.8.15.patch  coq-hott.patch  coq-stdlib.patch  coqc  coqc_shim.ml  coqtop_shim.ml  dune  injection-flags.in  shim_lib.ml.in  tactician-patch  tactician-patch.in  tactician.ml.in  with-tactician  with-tactician.in
man/: dune
src/: benchmark.ml  constrexpr_convert.ml  constrexpr_functor.ml  cook_tacexpr.ml  coq_ast_cata.ml  coq_ast_cata.mli  coq_ast_map_elements.ml  coq_ast_monadic_map.ml  coq_ast_sequence.ml  data.ml  data.ml.orig  decomposition_learner.ml  diagonal_iterative_search.ml  diagonal_search.ml  dijkstra_iterative_search.ml  discharge_tacexpr.ml  dune  extreme_tactic_normalize.ml  features.ml  find_tactic_syntax.ml  forest.ml  forest_data_generator.ml  forest_online.bak.ml  forest_online.ml  forest_online_learner.ml  forest_online_learner.ml.orig  g_ltac1_record.mlg  g_ltac1_tactics.mlg  g_tactician.mlg  gendischarge.ml  glob_term_convert.ml  glob_term_functor.ml  hh_term.ml  impurity.ml  inline_private_constants.ml  knn.ml  knnLSHForest.ml  knnLSHForest_back.ml  known_ssr_witnesses.ml  known_witnesses.ml  (+64 more)
tests/: DummyTest.v  DummyTest2.v  Equality.v  Sections.v  dune
theories/: Ltac1.v  Ltac1Record.v  Ltac1Tactics.v  Test.v  dune
theories/Ltac1/: Record.v  Tactics.v
