(rule
 (targets with-tactician tactician-patch tactician.ml shim_lib.ml)
 ; When installed through opam, we perform substitutions through the 'substs' directive in the opam file.
 ; It also works using this rule, but running opam during an installation can be risky due to sandboxing issues.
 (mode fallback)
 (deps with-tactician.in tactician-patch.in tactician.ml.in shim_lib.ml.in)
 (action (run opam config subst %{targets})))

(install
 (files coqc.real coqtop.real) ; mount point for the real coq
 (section lib)
 (package coq-tactician)
)
(install ; TODO: Old location of injection flags. To be removed.
 (files injection-flags)
 (section etc)
 (package coq-tactician)
)
(install
 (files
   coq-hott.patch
   coq-hott.8.11.patch
 )
 (section share)
 (package coq-tactician)
)
(install
 (section share)
 (files (injection-flags as plugins/coq-tactician/injection-flags)))

(generate_sites_module
 (module coq_shim)
 (sites coq-tactician) (sourceroot))

(executable
 (name tactician)
 (package coq-tactician)
 (public_name tactician)
 (flags :standard -warn-error -A)
 (modules ("tactician"))
 (libraries
   unix
   opam-client
   dune-site
 )
)
(executables
 (names coqc_shim coqtop_shim)
 (flags :standard -warn-error -A)
 (modules ("coqc_shim" coqtop_shim shim_lib))
 (libraries
   unix
   dune-site
 )
)
(install
 (files
   with-tactician
   tactician-patch
  (coqc_shim.exe as coqc-shim)
  (coqtop_shim.exe as coqtop-shim))
 (section libexec)
 (package coq-tactician)
)
