(coq.pp (modules g_ltac1_record g_ltac1_tactics))
(library
 (name tactician_ltac1_record_plugin)
 (public_name coq-tactician.record-plugin)
 (flags :standard -rectypes -w -27 -warn-error -A)
 (modules (
   "g_ltac1_record"
   ltacrecord
   inline_private_constants
   diagonal_iterative_search
   offline_evaluation_simulator_learner
   naiveknn_learner
   naiveknn_subst_learner
   trivial_learners
   lshf_learner
   knn
   find_tactic_syntax
   tactic_substitute
   tactic_abstract
   search_strategy
   search_strategy_internal
   learner_helper
   features
   tactic_learner
   tactic_learner_internal
   tactic_normalize
   tactic_annotate
   known_witnesses
   cook_tacexpr
   gendischarge
   mapping_helpers
   map_all_the_witnesses
   map_all_the_things
   sexpr
   tactic_sexpr
   timeouttac
   tactician_util
 ))
 (libraries
   coq-core.plugins.ltac
   coq-core.plugins.ssrmatching
   coq-core.plugins.ssreflect
   coq-core.plugins.firstorder
   coq-core.plugins.funind
 )
)
(library
 (name tactician_ssreflect_plugin)
 (public_name coq-tactician.ssreflect-plugin)
 (flags :standard -rectypes -w -27 -warn-error -A)
 (modules (
   "known_ssr_witnesses"
   map_ssr_witnesses
 ))
 (libraries
   coq-core.plugins.ltac
   coq-core.plugins.ssrmatching
   coq-core.plugins.ssreflect
   coq-tactician.record-plugin
 )
)
(library
 (name tactician_ltac1_tactics_plugin)
 (public_name coq-tactician.tactics-plugin)
 (flags :standard -rectypes -w -27 -warn-error -A)
 (modules ("g_ltac1_tactics"))
 (libraries
   coq-tactician.record-plugin
 )
)
